--- a/data/authors.yml
+++ b/data/authors.yml
@@ -4,4 +4,4 @@
   title: Lead Developer Evangelist
   company: Genesys
   twitter: PureCloud_Dev
-  bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis ipsum elit. Curabitur mauris nisi, accumsan nec bibendum nec, fringilla quis metus. Integer felis libero, cursus sed ornare sed, gravida id odio. Vivamus risus massa, pharetra vel luctus eu, feugiat ac neque. Cras ac augue ac nulla ultricies convallis quis quis erat. Phasellus bibendum vestibulum sapien id vestibulum. Etiam ultricies consequat odio. Aenean porta arcu vel commodo cursus.
+  bio: Kevin has been with Interactive Intelligence/Genesys since 2005 and has spent most of his time there focused on APIs and Integrations. 
