--- a/rakefile
+++ b/rakefile
@@ -6,10 +6,10 @@ task :default do
     end
 
     manifest = {
-        "name": "developercenter-blog",
-        "version": "",
-        "buildNumber": "",
-        "indexFiles": []
+        "name"=> "developercenter-blog",
+        "version"=> "",
+        "buildNumber"=> "",
+        "indexFiles"=> []
     }
 
     if ENV['BUILD_NUMBER'] != nil
@@ -24,11 +24,11 @@ task :default do
     end
 
     manifest[:indexFiles].push({
-        "file": "blog/atom.xml"
+        "file"=> "blog/atom.xml"
     })
 
     manifest[:indexFiles].push({
-        "file": "blog/cdn.json"
+        "file"=> "blog/cdn.json"
     })
 
     File.open("localBuild/manifest.json", 'w') { |file| file.write(manifest.to_json) }
