--- a/data/authors.yml
+++ b/data/authors.yml
@@ -5,3 +5,10 @@
   company: Genesys
   twitter: PureCloud_Dev
   bio: Kevin has been with Interactive Intelligence/Genesys since 2005 and has spent most of his time there focused on APIs and Integrations. 
+- email: tim.j.smith@genesys.com
+  name: Tim Smith
+  title: Sr. Developer Evangelist
+  company: Genesys
+  twitter: PureCloud_Dev
+  bio: Tim has been with Interactive Intelligence/Genesys since 2007 and has focused on designing and developing customer-facing integrations and customizations.
+  
