added author info and image

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -4,11 +4,15 @@
   title: Lead Developer Evangelist
   company: Genesys
   twitter: PureCloud_Dev
-  bio: Kevin has been with Interactive Intelligence/Genesys since 2005 and has spent most of his time there focused on APIs and Integrations. 
+  bio: Kevin has been with Interactive Intelligence/Genesys since 2005 and has spent most of his time there focused on APIs and Integrations.
 - email: tim.j.smith@genesys.com
   name: Tim Smith
   title: Sr. Developer Evangelist
   company: Genesys
   twitter: PureCloud_Dev
   bio: Tim has been with Interactive Intelligence/Genesys since 2007 and has focused on designing and developing customer-facing integrations and customizations.
-  
+- email: aaron.bickell@genesys.com
+  name: Aaron Bickell
+  title: Director, Back Office Applications
+  company: Genesys
+  bio: livin' that cloud lifestyle since 2012
