--- a/data/authors.yml
+++ b/data/authors.yml
@@ -11,4 +11,9 @@
   company: Genesys
   twitter: PureCloud_Dev
   bio: Tim has been with Interactive Intelligence/Genesys since 2007 and has focused on designing and developing customer-facing integrations and customizations.
-  
+- email: dariusz.socha@genesys.com
+  name: Dariusz Socha
+  title: Sr Impl & Dev Engineer
+  company: Genesys
+  twitter: 
+  bio: Dariusz has joined to Interactive Intelligence/Genesys in 2015. He is a PS application developer in the EMEA.  
