some changes related to reviewer comments

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -16,4 +16,4 @@
   title: Sr Impl & Dev Engineer
   company: Genesys
   twitter: 
-  bio: Dariusz has joined to Interactive Intelligence/Genesys in 2015. He is a PS application developer in the EMEA.  
+  bio: Dariusz has joined Interactive Intelligence/Genesys in 2015. He is a PS application developer in the EMEA.  
