Added nGuvu blog - on-boarding experience
Added nGuvu blog - on-boarding experience

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -15,10 +15,16 @@
   name: Dariusz Socha
   title: Sr Impl & Dev Engineer
   company: Genesys
-  twitter: 
-  bio: Dariusz has joined Interactive Intelligence/Genesys in 2015. He is a PS application developer in the EMEA.  
+  twitter:
+  bio: Dariusz has joined Interactive Intelligence/Genesys in 2015. He is a PS application developer in the EMEA.
 - email: aaron.bickell@genesys.com
   name: Aaron Bickell
   title: Director, Back Office Applications
   company: Genesys
   bio: livin' that cloud lifestyle since 2012
+- email: jacou@nguvu.com
+  name: Jacou Sarrazin
+  title: CTO
+  company: nGuvu Technologies
+  twitter: jacou
+  bio: Jacou is CTO of nGuvu, a gamification and machine learning software company. Prior to nGuvu, Jacou was VP Product at Tungle (acquired by BlackBerry).
