--- a/data/authors.yml
+++ b/data/authors.yml
@@ -28,3 +28,9 @@
   company: nGuvu Technologies
   twitter: jacou
   bio: Jacou is CTO of nGuvu, a gamification and machine learning software company. Prior to nGuvu, Jacou was VP Product at Tungle (acquired by BlackBerry).
+- email: xander.dumaine@genesys.com
+  name: Xander Dumaine
+  title: Team Lead, Sr Software Engineer
+  company: Genesys
+  twitter:
+  bio: "Xander Dumaine loves open source, innovative projects, and helping others learn about software. Xander is primarily a front-end engineer specializing in real-time communications: virtual phones, video chat, and screen sharing."
