Updates to images and formatting

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -38,4 +38,4 @@
   name: Patrick Barry
   title: Senior Software Engineer
   company: Genesys
-  bio: Patrick has been with Genesys since 2014 and has focused on designing and developing the REST services that make up the Purecloud ecosystem.
+  bio: Patrick has been with Genesys since 2014 and has focused on designing and developing internal/external REST services used within PureCloud.
