adding hello world blog

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -39,3 +39,8 @@
   title: Senior Software Engineer
   company: Genesys
   bio: Patrick has been with Genesys since 2014 and has focused on designing and developing internal/external REST services used within PureCloud.
+- email: zachary.hinkle@genesys.com
+  name: Zach Hinkle
+  title: Solution Portfolio Manager
+  company: Genesys
+  bio: Zach has been with Interactive Intelligence/Genesys since 2006 holding positions across the companies from Support, to Sales, to Product Management. Outside of work, Zach enjoys swimming, sweedish fish, and long walks on the beach.
