Content edits and adding author info

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -44,3 +44,8 @@
   title: Solution Portfolio Manager
   company: Genesys
   bio: Zach has been with Interactive Intelligence/Genesys since 2006 holding positions across the companies from Support, to Sales, to Product Management. Outside of work, Zach enjoys swimming, sweedish fish, and long walks on the beach.
+- email: daniel.szlaski@genesys.com
+  name: Daniel Szlaski
+  title: Cloud Solutions Architect
+  company: Genesys
+  bio: Daniel is a Cloud Solutions Architect at Genesys hailing from Poland. He has been with Genesys since 2016. 
