--- a/data/authors.yml
+++ b/data/authors.yml
@@ -49,3 +49,9 @@
   title: Cloud Solutions Architect
   company: Genesys
   bio: Daniel is a Cloud Solutions Architect at Genesys hailing from Poland. He has been with Genesys since 2016. 
+- email: russelle.carvajal@genesys.com
+  name: Russelle Carvajal
+  title: Development Support Associate
+  company: Genesys
+  bio: Russelle is an Automation developer for a 2 years and now working as a developer support for PureCloud.
+
