--- a/data/authors.yml
+++ b/data/authors.yml
@@ -53,5 +53,5 @@
   name: Russelle Carvajal
   title: Development Support Associate
   company: Genesys
-  bio: Russelle is an Automation developer for a 2 years and now working as a developer support for PureCloud.
+  bio: Russelle is an automation developer for 2 years and now working as a developer support for PureCloud.
 
