no-jira adding build-a-bot blog

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -49,3 +49,8 @@
   title: Cloud Solutions Architect
   company: Genesys
   bio: Daniel is a Cloud Solutions Architect at Genesys hailing from Poland. He has been with Genesys since 2016. 
+- email: jack.nichols@genesys.com
+  name: Jack Nichols
+  title: VP, Product Management
+  company: Genesys
+  bio: Jack is a long-time Genesys employee and is currently the Vice President of PureCloud Product Management. He enjoys competitive full-contact Euchre, fluffy puppies, and long walks on Indiana Beach.
