API-4800 ms teams blog

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -59,3 +59,8 @@
   title: VP, Product Management
   company: Genesys
   bio: Jack is a long-time Genesys employee and is currently the Vice President of PureCloud Product Management. He enjoys competitive full-contact Euchre, fluffy puppies, and long walks on Indiana Beach.
+- email: trey.buck@genesys.com
+  name: Trey Buck
+  title: Senior Product Manager
+  company: Genesys
+  bio: Trey is a Senior Product Manager for PureCloud covering Business Communications and Media.  With a decade of experience growing SaaS- and cloud-based solutions for companies of all sizes and a focus on customer-driven development, he has led product strategy and roadmaps across multiple web, mobile, and installed product platforms to turn user requirements into real world tools that people love.  When not thinking about the next great feature to build, his passion for family, futbol (or 'soccer'), and gaming are what keep him busy.
