Add agent chat assistant blog

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -64,3 +64,8 @@
   title: Senior Product Manager
   company: Genesys
   bio: Trey is a Senior Product Manager for PureCloud covering Business Communications and Media.  With a decade of experience growing SaaS- and cloud-based solutions for companies of all sizes and a focus on customer-driven development, he has led product strategy and roadmaps across multiple web, mobile, and installed product platforms to turn user requirements into real world tools that people love.  When not thinking about the next great feature to build, his passion for family, futbol (or 'soccer'), and gaming are what keep him busy.
+- email: catherine_agnes.corpuz@genesys.com
+  name: Agnes Corpuz
+  title: Development Support Engineer
+  company: Genesys
+  bio: Agnes is a Development Support Engineer at Genesys. She has been with Genesys since 2017.
