Blog on managing query parameters with a Custom Client Application using OAuth Implicit Grant

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -69,3 +69,8 @@
   title: Development Support Engineer
   company: Genesys
   bio: Agnes is a Development Support Engineer at Genesys. She has been with Genesys since 2017.
+- email: jerome.saint-marc@genesys.com
+  name: Jerome Saint-Marc
+  title: Sr Development Support Engineer (Dev Ecosystem)
+  company: Genesys
+  bio: Jerome has been with Genesys since 1999 holding different positions across the company (Professional Services, Pre-Sales, Product Management, Solutions Architect and now Support in Dev Ecosystem).
