--- a/data/authors.yml
+++ b/data/authors.yml
@@ -3,13 +3,13 @@
   name: Kevin Glinski
   title: Lead Developer Evangelist
   company: Genesys
-  twitter: PureCloud_Dev
+  twitter: GenesysCloudDev
   bio: Kevin has been with Interactive Intelligence/Genesys since 2005 and has spent most of his time there focused on APIs and Integrations.
 - email: tim.j.smith@genesys.com
   name: Tim Smith
   title: Sr. Developer Evangelist
   company: Genesys
-  twitter: PureCloud_Dev
+  twitter: GenesysCloudDev
   bio: Tim has been with Interactive Intelligence/Genesys since 2007 and has focused on designing and developing customer-facing integrations and customizations.
 - email: dariusz.socha@genesys.com
   name: Dariusz Socha
@@ -38,7 +38,7 @@
   name: Patrick Barry
   title: Senior Software Engineer
   company: Genesys
-  bio: Patrick has been with Genesys since 2014 and has focused on designing and developing internal/external REST services used within PureCloud.
+  bio: Patrick has been with Genesys since 2014 and has focused on designing and developing internal/external REST services used within Genesys Cloud.
 - email: zachary.hinkle@genesys.com
   name: Zach Hinkle
   title: Solution Portfolio Manager
@@ -53,17 +53,17 @@
   name: Russelle Carvajal
   title: Development Support Associate
   company: Genesys
-  bio: Russelle is an automation developer for 2 years and now working as a developer support for PureCloud.
+  bio: Russelle is an automation developer for 2 years and now working as a developer support for Genesys Cloud.
 - email: jack.nichols@genesys.com
   name: Jack Nichols
   title: VP, Product Management
   company: Genesys
-  bio: Jack is a long-time Genesys employee and is currently the Vice President of PureCloud Product Management. He enjoys competitive full-contact Euchre, fluffy puppies, and long walks on Indiana Beach.
+  bio: Jack is a long-time Genesys employee and is currently the Vice President of Genesys Cloud Product Management. He enjoys competitive full-contact Euchre, fluffy puppies, and long walks on Indiana Beach.
 - email: trey.buck@genesys.com
   name: Trey Buck
   title: Senior Product Manager
   company: Genesys
-  bio: Trey is a Senior Product Manager for PureCloud covering Business Communications and Media.  With a decade of experience growing SaaS- and cloud-based solutions for companies of all sizes and a focus on customer-driven development, he has led product strategy and roadmaps across multiple web, mobile, and installed product platforms to turn user requirements into real world tools that people love.  When not thinking about the next great feature to build, his passion for family, futbol (or 'soccer'), and gaming are what keep him busy.
+  bio: Trey is a Senior Product Manager for Genesys Cloud covering Business Communications and Media.  With a decade of experience growing SaaS- and cloud-based solutions for companies of all sizes and a focus on customer-driven development, he has led product strategy and roadmaps across multiple web, mobile, and installed product platforms to turn user requirements into real world tools that people love.  When not thinking about the next great feature to build, his passion for family, futbol (or 'soccer'), and gaming are what keep him busy.
 - email: catherine_agnes.corpuz@genesys.com
   name: Agnes Corpuz
   title: Development Support Engineer
