--- a/data/authors.yml
+++ b/data/authors.yml
@@ -15,6 +15,7 @@
   name: Jeff Beard
   title: API Documentation Manager
   company: Genesys
+  twitter:
   bio: Jeff has been with Interactive Intelligence/Genesys since 2014 and is focused on creating API documentation.
 - email: dariusz.socha@genesys.com
   name: Dariusz Socha
