Add new author information

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -85,3 +85,8 @@
   title: Architect, Team Lead - Developer Engagement
   company: Genesys
   bio: John has been with Genesys since 2015.  He spent the last 5 years working within the Edge Infrastructure Team and recently took on the job of launching the Genesys Cloud Developer Engagement team.  John is a prolific speaker and writer. He regularly speaks at conferences and industry user groups. Over the last 20 years, John has authored, co-authored and been a technical reviewer for a number of Java-based technology books and industry publications.
+- email: mrunal.nargunde@genesys.com
+  name: Mrunal Nargunde
+  title: Senior Software Engineer - Developer Engagement
+  company: Genesys
+  bio: Mrunal has been with Genesys since 2015.  She spent the last 5 years working within the Directory Team specializing in backend api developement mainly focussing on designing and developing internal/external REST services used within PureCloud.
