--- a/data/authors.yml
+++ b/data/authors.yml
@@ -85,3 +85,8 @@
   title: Architect, Team Lead - Developer Engagement
   company: Genesys
   bio: John has been with Genesys since 2015.  He spent the last 5 years working within the Edge Infrastructure Team and recently took on the job of launching the Genesys Cloud Developer Engagement team.  John is a prolific speaker and writer. He regularly speaks at conferences and industry user groups. Over the last 20 years, John has authored, co-authored and been a technical reviewer for a number of Java-based technology books and industry publications.
+- email: weite.li@genesys.com
+  name: Weite Li
+  title: Associate Software Engineer
+  company: Genesys
+  bio: Weite just graduated from college in summer 2020 and joined Genesys since then. He is working within Developer Engagement team.
