Add Ronan Watkins Bio

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -90,3 +90,8 @@
   title: Associate Software Engineer
   company: Genesys
   bio: Weite just graduated from college in summer 2020 and joined Genesys since then. He is working within Developer Engagement team.
+- email: ronan.watkins@genesys.com
+  name: Ronan Watkins
+  title: Software Engineer
+  company: Genesys
+  bio: Ronan has been with Genesys since 2020 and began working on the newly created Developer Engagement team as a software engineer. Outside of work he likes tag rugby, travelling (when possible) and playing guitar.
