DEVENGAGE-420:  Introduction to Web Messaging

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -100,3 +100,8 @@
   title: Software Engineer
   company: Genesys
   bio: Ronan has been with Genesys since 2020 and began working on the newly created Developer Engagement team as a software engineer. Outside of work he likes tag rugby, travelling (when possible) and playing guitar.
+- email: chad.hansen@genesys.com
+  name: Chad Hansen
+  title: Product Manager
+  company: Genesys
+  bio:   NEED TO FILL IN 
